--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.9.7
 WORKDIR /app
 ENV FLASK_APP=app
 
-COPY ./flaskapp/requirements.txt ./
+COPY flaskapp/requirements.txt ./
 
 RUN \
 pip install --upgrade pip && \
