--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -3,10 +3,10 @@ FROM python:3.9.7
 WORKDIR /app
 ENV FLASK_APP=app
 
-COPY flaskapp/requirements.txt ./
+COPY ./flaskapp/requirements.txt /app
 
 RUN \
 pip install --upgrade pip && \
-pip install -r requirements.txt &&\
-pip install numpy &&\
-pip install werkzeug
+pip install -r /app/requirements.txt
+#pip install numpy &&\
+#pip install
