Change: `requirements.txt`のディレクトリを移動

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -3,10 +3,8 @@ FROM python:3.9.7
 WORKDIR /app
 ENV FLASK_APP=app
 
-COPY ./flaskapp/requirements.txt /app
+COPY ./requirements.txt ./
 
 RUN \
 pip install --upgrade pip && \
-pip install -r /app/requirements.txt
-#pip install numpy &&\
-#pip install
+pip install -r ./requirements.txt
